--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,9 @@
      font-family: "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
      color: #ffe;
    }
+   .small {
+     font-size: .6em;
+   }
    a {
      color: #88f;
    }
@@ -25,7 +28,7 @@
 <body>
   <a href="https://github.com/polamjag/diagunokun"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
   <main class="container">
-    <h1>diagunokun - yet another Shindankun</h1>
+    <h1>diagunokun<span class='small'> - yet another Shindankun</span></h1>
 
     <div class="row">
       <dl>
@@ -34,7 +37,7 @@
     </div>
 
     <p>
-      Tip: you can retrieve as same data as this page in JSON on <a href='./json'>./json</a>.
+    Tip: you can retrieve as same data as this page in JSON on <a href='./json'>./json</a> or in CSV on <a href='./csv'>./csv</a>.
     </p>
   </main>
 </body>
