--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
   <style>
    body {
      background-color: #092006;
-     font-family: "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
+     font-family: sans-serif;
      color: #ffe;
    }
    .small {
